# RefET

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  VALIDATION.md  pyproject.toml  requirements_test.txt  setup.py
.github/workflows/: build.yml
refet/: __init__.py  calcs.py  daily.py  hourly.py  refet.py  units.py
src/refet/: __init__.py  calcs.py  daily.py  hourly.py  units.py
tests/: test_calcs.py  test_calcs_negative_cimis_eto.py  test_daily.py  test_daily_refet_output.py  test_hourly.py  test_hourly_refet_output.py  test_refet.py  test_units.py
tests/data/: .gitignore  FALN_Agrimet_daily.def  FALN_Agrimet_daily_raw_2015.csv  FALN_Agrimet_daily_raw_2015.out  FALN_Agrimet_hourly.def  FALN_Agrimet_hourly_raw_2015.csv  FALN_Agrimet_hourly_raw_2015.out  setup_test_data.py
