[project]
name = "refet"
version = "0.4.1"
authors = [
  { name="Charles Morton", email="charles.morton@dri.edu" },
]
description = "ASCE Standardized Reference Evapotranspiration Functions"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/WSWUP/RefET"
"Bug Tracker" = "https://github.com/WSWUP/RefET/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [project.optional-dependencies]
# dev = [
#     "pandas",
#     "pytz",
#     "pytest",
#     "pytest-cov",
# ]

# [tool.pytest.ini_options]
# pythonpath = [
#   "src"
# ]
# addopts = [
#     "--import-mode=importlib",
# ]

# [tool.coverage.run]
# source = ["src"]

